# MCP-A2A-step-by-step

./: README.md  mcp-weather-client-agent.ipynb  simple-weather-agents.ipynb  weather-advisor-agent.ipynb
A2A Server Weather Agent with Google Cloud Run/: Containerfile  deploy.sh  pyproject.toml  test_client.py  weather-agent.yaml
A2A Server Weather Agent with Google Cloud Run/.ipynb_checkpoints/: test_client-checkpoint.py
A2A Server Weather Agent with Google Cloud Run/app/.ipynb_checkpoints/: __main__-checkpoint.py  agent-checkpoint.py  agent_executor-checkpoint.py
MCP server with Google Cloud Run/: deploy.sh  pyproject.toml  server.py  simple_test.py
MCP server with Google Cloud Run/.ipynb_checkpoints/: simple_test-checkpoint.py
