[project]
name = "weather-mcp-server"
version = "0.1.0"
description = "Weather Intelligence MCP Server for Google Cloud Run"
requires-python = ">=3.11"
dependencies = [
    "fastmcp==2.8.0",
    "requests",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
